Add pipeline notebook

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -2,20 +2,128 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "873507c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting google-generativeai\n",
+      "  Downloading google_generativeai-0.8.5-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Requirement already satisfied: pdf2image in /usr/local/lib/python3.11/site-packages (1.17.0)\n",
+      "Requirement already satisfied: pytesseract in /usr/local/lib/python3.11/site-packages (0.3.13)\n",
+      "Requirement already satisfied: pillow in /usr/local/lib/python3.11/site-packages (11.3.0)\n",
+      "Collecting pdfplumber\n",
+      "  Downloading pdfplumber-0.11.8-py3-none-any.whl.metadata (43 kB)\n",
+      "Collecting google-ai-generativelanguage==0.6.15 (from google-generativeai)\n",
+      "  Downloading google_ai_generativelanguage-0.6.15-py3-none-any.whl.metadata (5.7 kB)\n",
+      "Collecting google-api-core (from google-generativeai)\n",
+      "  Downloading google_api_core-2.28.1-py3-none-any.whl.metadata (3.3 kB)\n",
+      "Collecting google-api-python-client (from google-generativeai)\n",
+      "  Downloading google_api_python_client-2.187.0-py3-none-any.whl.metadata (7.0 kB)\n",
+      "Collecting google-auth>=2.15.0 (from google-generativeai)\n",
+      "  Downloading google_auth-2.43.0-py2.py3-none-any.whl.metadata (6.6 kB)\n",
+      "Requirement already satisfied: protobuf in /usr/local/lib/python3.11/site-packages (from google-generativeai) (5.29.5)\n",
+      "Requirement already satisfied: pydantic in /usr/local/lib/python3.11/site-packages (from google-generativeai) (2.12.4)\n",
+      "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/site-packages (from google-generativeai) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.11/site-packages (from google-generativeai) (4.15.0)\n",
+      "Collecting proto-plus<2.0.0dev,>=1.22.3 (from google-ai-generativelanguage==0.6.15->google-generativeai)\n",
+      "  Downloading proto_plus-1.26.1-py3-none-any.whl.metadata (2.2 kB)\n",
+      "Collecting googleapis-common-protos<2.0.0,>=1.56.2 (from google-api-core->google-generativeai)\n",
+      "  Downloading googleapis_common_protos-1.72.0-py3-none-any.whl.metadata (9.4 kB)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.18.0 in /usr/local/lib/python3.11/site-packages (from google-api-core->google-generativeai) (2.32.5)\n",
+      "Requirement already satisfied: grpcio<2.0.0,>=1.33.2 in /usr/local/lib/python3.11/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai) (1.76.0)\n",
+      "Collecting grpcio-status<2.0.0,>=1.33.2 (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai)\n",
+      "  Downloading grpcio_status-1.76.0-py3-none-any.whl.metadata (1.1 kB)\n",
+      "Collecting cachetools<7.0,>=2.0.0 (from google-auth>=2.15.0->google-generativeai)\n",
+      "  Downloading cachetools-6.2.2-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Collecting pyasn1-modules>=0.2.1 (from google-auth>=2.15.0->google-generativeai)\n",
+      "  Downloading pyasn1_modules-0.4.2-py3-none-any.whl.metadata (3.5 kB)\n",
+      "Collecting rsa<5,>=3.1.4 (from google-auth>=2.15.0->google-generativeai)\n",
+      "  Downloading rsa-4.9.1-py3-none-any.whl.metadata (5.6 kB)\n",
+      "INFO: pip is looking at multiple versions of grpcio-status to determine which version is compatible with other requirements. This could take a while.\n",
+      "Collecting grpcio-status<2.0.0,>=1.33.2 (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai)\n",
+      "  Downloading grpcio_status-1.75.1-py3-none-any.whl.metadata (1.1 kB)\n",
+      "  Downloading grpcio_status-1.75.0-py3-none-any.whl.metadata (1.1 kB)\n",
+      "  Downloading grpcio_status-1.74.0-py3-none-any.whl.metadata (1.1 kB)\n",
+      "  Downloading grpcio_status-1.73.1-py3-none-any.whl.metadata (1.1 kB)\n",
+      "  Downloading grpcio_status-1.73.0-py3-none-any.whl.metadata (1.1 kB)\n",
+      "  Downloading grpcio_status-1.72.2-py3-none-any.whl.metadata (1.1 kB)\n",
+      "  Downloading grpcio_status-1.72.1-py3-none-any.whl.metadata (1.1 kB)\n",
+      "INFO: pip is still looking at multiple versions of grpcio-status to determine which version is compatible with other requirements. This could take a while.\n",
+      "  Downloading grpcio_status-1.71.2-py3-none-any.whl.metadata (1.1 kB)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.11/site-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (3.4.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/site-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/site-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/site-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (2024.8.30)\n",
+      "Collecting pyasn1>=0.1.3 (from rsa<5,>=3.1.4->google-auth>=2.15.0->google-generativeai)\n",
+      "  Downloading pyasn1-0.6.1-py3-none-any.whl.metadata (8.4 kB)\n",
+      "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.11/site-packages (from pytesseract) (25.0)\n",
+      "Requirement already satisfied: pdfminer.six==20251107 in /usr/local/lib/python3.11/site-packages (from pdfplumber) (20251107)\n",
+      "Requirement already satisfied: pypdfium2>=4.18.0 in /usr/local/lib/python3.11/site-packages (from pdfplumber) (4.30.0)\n",
+      "Requirement already satisfied: cryptography>=36.0.0 in /usr/local/lib/python3.11/site-packages (from pdfminer.six==20251107->pdfplumber) (46.0.3)\n",
+      "Requirement already satisfied: cffi>=2.0.0 in /usr/local/lib/python3.11/site-packages (from cryptography>=36.0.0->pdfminer.six==20251107->pdfplumber) (2.0.0)\n",
+      "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/site-packages (from cffi>=2.0.0->cryptography>=36.0.0->pdfminer.six==20251107->pdfplumber) (2.23)\n",
+      "Collecting httplib2<1.0.0,>=0.19.0 (from google-api-python-client->google-generativeai)\n",
+      "  Downloading httplib2-0.31.0-py3-none-any.whl.metadata (2.2 kB)\n",
+      "Collecting google-auth-httplib2<1.0.0,>=0.2.0 (from google-api-python-client->google-generativeai)\n",
+      "  Downloading google_auth_httplib2-0.2.1-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting uritemplate<5,>=3.0.1 (from google-api-python-client->google-generativeai)\n",
+      "  Downloading uritemplate-4.2.0-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Collecting pyparsing<4,>=3.0.4 (from httplib2<1.0.0,>=0.19.0->google-api-python-client->google-generativeai)\n",
+      "  Downloading pyparsing-3.2.5-py3-none-any.whl.metadata (5.0 kB)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.11/site-packages (from pydantic->google-generativeai) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.41.5 in /usr/local/lib/python3.11/site-packages (from pydantic->google-generativeai) (2.41.5)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.2 in /usr/local/lib/python3.11/site-packages (from pydantic->google-generativeai) (0.4.2)\n",
+      "Downloading google_generativeai-0.8.5-py3-none-any.whl (155 kB)\n",
+      "Downloading google_ai_generativelanguage-0.6.15-py3-none-any.whl (1.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading google_api_core-2.28.1-py3-none-any.whl (173 kB)\n",
+      "Downloading google_auth-2.43.0-py2.py3-none-any.whl (223 kB)\n",
+      "Downloading cachetools-6.2.2-py3-none-any.whl (11 kB)\n",
+      "Downloading googleapis_common_protos-1.72.0-py3-none-any.whl (297 kB)\n",
+      "Downloading grpcio_status-1.71.2-py3-none-any.whl (14 kB)\n",
+      "Downloading proto_plus-1.26.1-py3-none-any.whl (50 kB)\n",
+      "Downloading rsa-4.9.1-py3-none-any.whl (34 kB)\n",
+      "Downloading pdfplumber-0.11.8-py3-none-any.whl (60 kB)\n",
+      "Downloading pyasn1-0.6.1-py3-none-any.whl (83 kB)\n",
+      "Downloading pyasn1_modules-0.4.2-py3-none-any.whl (181 kB)\n",
+      "Downloading google_api_python_client-2.187.0-py3-none-any.whl (14.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.6/14.6 MB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading google_auth_httplib2-0.2.1-py3-none-any.whl (9.5 kB)\n",
+      "Downloading httplib2-0.31.0-py3-none-any.whl (91 kB)\n",
+      "Downloading pyparsing-3.2.5-py3-none-any.whl (113 kB)\n",
+      "Downloading uritemplate-4.2.0-py3-none-any.whl (11 kB)\n",
+      "Installing collected packages: uritemplate, pyparsing, pyasn1, proto-plus, googleapis-common-protos, cachetools, rsa, pyasn1-modules, httplib2, grpcio-status, google-auth, pdfplumber, google-auth-httplib2, google-api-core, google-api-python-client, google-ai-generativelanguage, google-generativeai\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17/17\u001b[0m [google-generativeai]ogle-ai-generativelanguage]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed cachetools-6.2.2 google-ai-generativelanguage-0.6.15 google-api-core-2.28.1 google-api-python-client-2.187.0 google-auth-2.43.0 google-auth-httplib2-0.2.1 google-generativeai-0.8.5 googleapis-common-protos-1.72.0 grpcio-status-1.71.2 httplib2-0.31.0 pdfplumber-0.11.8 proto-plus-1.26.1 pyasn1-0.6.1 pyasn1-modules-0.4.2 pyparsing-3.2.5 rsa-4.9.1 uritemplate-4.2.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install google-generativeai pdf2image pytesseract pillow pdfplumber"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0761df56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ All libraries imported\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -32,10 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b4281297",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Configuration loaded\n",
+      "  PDF Directory: C:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\data\n",
+      "  Gemini Model: gemini-1.5-flash\n",
+      "\n",
+      "⚠ WARNING: GEMINI_API_KEY not found!\n",
+      "  Get key from: https://makersuite.google.com/app/apikey\n"
+     ]
+    }
+   ],
    "source": [
     "PDF_DIR = r\"C:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\data\"\n",
     "OUTPUT_DIR = \"./extracted_data\"\n",
@@ -69,10 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9d0f0618",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ JSON schema defined\n"
+     ]
+    }
+   ],
    "source": [
     "VALUATION_SCHEMA = {\n",
     "    \"type\": \"object\",\n",
@@ -144,10 +273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9e62af67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Validation function defined\n"
+     ]
+    }
+   ],
    "source": [
     "def validate_extracted_data(data: Dict) -> Tuple[bool, Optional[str]]:\n",
     "    \"\"\"Validate extracted data against schema\"\"\"\n",
@@ -162,10 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3ee9a439",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠ Supabase credentials not configured\n"
+     ]
+    }
+   ],
    "source": [
     "def init_supabase() -> Optional[Client]:\n",
     "    \"\"\"Initialize Supabase client\"\"\"\n",
@@ -186,10 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "06a1d538",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Supabase functions defined\n"
+     ]
+    }
+   ],
    "source": [
     "def upload_to_supabase(client: Client, data: Dict, filename: str) -> bool:\n",
     "    \"\"\"Upload to Supabase\"\"\"\n",
@@ -211,10 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2f73ad33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ OCR function defined\n"
+     ]
+    }
+   ],
    "source": [
     "def process_scanned_pdf_with_ocr(pdf_path: str) -> str:\n",
     "    \"\"\"Convert scanned PDF to text using Tesseract OCR\"\"\"\n",
@@ -273,10 +434,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fd186301",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ PDF extraction with fallback defined\n"
+     ]
+    }
+   ],
    "source": [
     "def process_pdf_with_fallback(pdf_path: str) -> str:\n",
     "    \"\"\"Try multiple extraction methods\"\"\"\n",
@@ -311,10 +480,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "72030385",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Gemini extraction function defined\n"
+     ]
+    }
+   ],
    "source": [
     "def extract_with_gemini(text_content: str, filename: str) -> dict:\n",
     "    \"\"\"Extract structured data using Google Gemini\"\"\"\n",
@@ -420,10 +597,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5f11142a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Complete pipeline defined\n"
+     ]
+    }
+   ],
    "source": [
     "def process_single_pdf_complete(pdf_path: str, filename: str) -> dict:\n",
     "    \"\"\"Complete pipeline: OCR → Gemini → Validate → Save\"\"\"\n",
@@ -510,10 +695,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2157cff9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Batch processing defined\n"
+     ]
+    }
+   ],
    "source": [
     "def process_all_pdfs_complete():\n",
     "    \"\"\"Process all PDFs\"\"\"\n",
@@ -580,14 +773,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Test function defined\n",
       "\n",
       "======================================================================\n",
       "✅ ALL FUNCTIONS LOADED\n",
       "======================================================================\n",
-      "\n",
-      "Run: test_single_pdf()\n",
-      "or:  results = process_all_pdfs_complete()\n"
+      "No PDFs found\n"
      ]
     }
    ],
@@ -615,11 +805,47 @@
     "\n",
     "\n",
     "print(\"\\n\" + \"=\"*70)\n",
-    "print(\"✅ ALL FUNCTIONS LOADED\")\n",
     "print(\"=\"*70)\n",
     "test_single_pdf()\n",
     "# print(\"or:  results = process_all_pdfs_complete()\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "179daab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No PDFs in C:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\data\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = process_all_pdfs_complete()\n",
+    "results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daa54f2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
