Add pipeline notebook

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "873507c8",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "0761df56",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "b4281297",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
      "text": [
       "✓ Configuration loaded\n",
       "  PDF Directory: C:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\data\n",
-      "  Gemini Model: gemini-1.5-flash\n"
+      "  Gemini Model: gemini-2.5-flash\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
     "SUPABASE_KEY = os.getenv(\"SUPABASE_KEY\")\n",
     "\n",
     "# Model settings\n",
-    "GEMINI_MODEL = \"gemini-1.5-flash\"  # Fast and free!\n",
+    "GEMINI_MODEL = \"gemini-2.5-flash\" \n",
     "TESSERACT_PATH = r\"C:\\Program Files\\Tesseract-OCR\\tesseract.exe\"\n",
     "\n",
     "# Create directories\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "9d0f0618",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "9e62af67",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "3ee9a439",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "06a1d538",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "2f73ad33",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "fd186301",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "72030385",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "5f11142a",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "2157cff9",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "c6e1bdfd",
    "metadata": {},
    "outputs": [
@@ -743,26 +743,12 @@
       "      → Page 11/12... ✓ 1039 chars\n",
       "      → Page 12/12... ✓ 607 chars\n",
       "    → OCR complete: 12297 characters\n",
-      "  ✓ 12297 chars in 54.7s\n",
+      "  ✓ 12297 chars in 50.5s\n",
       "\n",
-      "  🤖 Stage 2: Gemini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  🤖 Stage 2: Gemini\n",
       "    → Sending 12297 chars to Gemini...\n",
       "\n",
-      "  ✗ Failed: Gemini error: 404 models/gemini-1.5-flash is not found for API version v1beta, or is not supported f\n",
+      "  ✗ Failed: Gemini error: Invalid operation: The `response.text` quick accessor requires the response to contain\n",
       "\n",
       "❌ TEST FAILED\n"
      ]
@@ -773,12 +759,12 @@
        "{'filename': 'doc LR NO 7815-83 LUKENYA AREA OFF MOMBASA ROAD MACHAKOS COUNTY.pdf',\n",
        " 'success': False,\n",
        " 'stage': 'gemini',\n",
-       " 'error': 'Gemini error: 404 models/gemini-1.5-flash is not found for API version v1beta, or is not supported for generateContent. Call ListModels to see the list of available models and their supported methods.',\n",
+       " 'error': \"Gemini error: Invalid operation: The `response.text` quick accessor requires the response to contain a valid `Part`, but none were returned. The candidate's [finish_reason](https://ai.google.dev/api/generate-content#finishreason) is 2.\",\n",
        " 'data': None,\n",
-       " 'timing': {'ocr': 54.7144877910614, 'total': 67.29082036018372}}"
+       " 'timing': {'ocr': 50.51800060272217, 'total': 68.88411569595337}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,64 +800,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "179daab2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "======================================================================\n",
-      "🚀 PROCESSING 4 PDFs\n",
-      "======================================================================\n",
-      "\n",
-      "======================================================================\n",
-      "[1/4] doc LR NO 7815-83 LUKENYA AREA OFF MOMBASA ROAD MACHAKOS COUNTY.pdf\n",
-      "======================================================================\n",
-      "\n",
-      "  📄 Stage 1: OCR\n",
-      "    → Trying pdfplumber...\n",
-      "    → Only 0 chars, trying OCR...\n",
-      "    → Converting PDF to images...\n",
-      "    → Running OCR on 12 pages...\n",
-      "      → Page 1/12... ✓ 1266 chars\n",
-      "      → Page 2/12... ✓ 2401 chars\n",
-      "      → Page 3/12... ✓ 165 chars\n",
-      "      → Page 4/12... ✓ 182 chars\n",
-      "      → Page 5/12... ✓ 1357 chars\n",
-      "      → Page 6/12... ✓ 1800 chars\n",
-      "      → Page 7/12... ✓ 1664 chars\n",
-      "      → Page 8/12... ✓ 539 chars\n",
-      "      → Page 9/12... ✓ 491 chars\n",
-      "      → Page 10/12... ✓ 581 chars\n",
-      "      → Page 11/12... ✓ 1039 chars\n",
-      "      → Page 12/12... ✓ 607 chars\n",
-      "    → OCR complete: 12297 characters\n",
-      "  ✓ 12297 chars in 53.3s\n",
-      "\n",
-      "  🤖 Stage 2: Gemini\n",
-      "    → Sending 12297 chars to Gemini...\n",
-      "\n",
-      "  ✗ Failed: Gemini error: 404 models/gemini-1.5-flash is not found for API version v1beta, or is not supported f\n",
-      "\n",
-      "❌ FAILED\n",
-      "\n",
-      "======================================================================\n",
-      "[2/4] doc39404020250117161224 (1) TITLE NO KARAI-GIKAMBURA-6448 ONDIRI AREA KIAMBU COUNTY.pdf\n",
-      "======================================================================\n",
-      "\n",
-      "  📄 Stage 1: OCR\n",
-      "    → Trying pdfplumber...\n",
-      "    → Only 0 chars, trying OCR...\n",
-      "    → Converting PDF to images...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results = process_all_pdfs_complete()\n",
-    "results\n"
+    "# results = process_all_pdfs_complete()\n",
+    "# results\n",
+    "# # "
    ]
   },
   {
