--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -37,8 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PDF_DIR = r\"C:\\Users\\samue\\Documents\\Year 2025\\Year 2025\\NAIROBI COUNTY\"\n",
-    "OUTPUT_DIR = \"./nrb_2025v1\"\n",
+    "PDF_DIR = r\"C:\\Users\\samue\\Documents\\Year 2025\\Year 2025\\Additional\"\n",
+    "OUTPUT_DIR = \"./additional_2025v1\"\n",
     "ERROR_LOG_DIR = \"./errors\"\n",
     "\n",
     "# Load environment variables\n",
@@ -49,6 +49,7 @@
     "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")\n",
     "SUPABASE_URL = os.getenv(\"SUPABASE_URL\")\n",
     "SUPABASE_KEY = os.getenv(\"SUPABASE_KEY\")\n",
+    "# print(f\"Key: {SUPABASE_KEY}, \\n URL: {SUPABASE_URL}\")\n",
     "\n",
     "# Model settings\n",
     "GEMINI_MODEL = \"models/gemini-2.5-flash\" \n",
@@ -230,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SUPABASE_TABLE = \"nrb_2025\"   \n",
+    "SUPABASE_TABLE = \"additional_2025v1\"   \n",
     "\n",
     "\n",
     "def sanitize_dates_for_supabase(data: dict) -> dict:\n",
